--- a/feature_main_android/src/main/res/layout/fragment_main.xml
+++ b/feature_main_android/src/main/res/layout/fragment_main.xml
@@ -32,5 +32,12 @@
             android:layout_gravity="center|bottom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/save_button_id"
+            android:layout_gravity="center|bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </FrameLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
