--- a/core_android/src/main/res/layout/fragment_auth.xml
+++ b/core_android/src/main/res/layout/fragment_auth.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="16dp"
+    android:gravity="center"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/sign_in_button_id"
-        android:text="Sign IN"
-        android:layout_gravity="center"
+    <TextView
+        android:text="Reveal your self!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-</FrameLayout>
+
+    <Button
+        android:id="@+id/sign_in_button_id"
+        android:text="Coming out"
+        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
