--- a/feature_main_android/src/main/res/layout/fragment_main.xml
+++ b/feature_main_android/src/main/res/layout/fragment_main.xml
@@ -12,12 +12,14 @@
         <androidx.core.widget.ContentLoadingProgressBar
             android:id="@+id/loading_progress_id"
             android:layout_gravity="center"
+            style="?android:attr/progressBarStyleInverse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/result_text_id"
             android:layout_gravity="center"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
