--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,7 @@
         android:title="Профиль" />
 
     <item
-        android:id="@+id/test_fragment_id"
-        android:title="Тест" />
+        android:id="@+id/activities_graph_id"
+        android:title="Активности" />
 
 </menu>
