--- a/app/src/main/res/navigation/frame_nav_graph.xml
+++ b/app/src/main/res/navigation/frame_nav_graph.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame_graph_id"
-    app:startDestination="@id/test_fragment_id">
+    app:startDestination="@id/main_graph_id">
 
     <include app:graph="@navigation/main_graph" />
     <include app:graph="@navigation/profile_graph" />
+    <include app:graph="@navigation/activities_graph" />
 
-    <fragment
-        android:id="@+id/test_fragment_id"
-        android:name="ru.gubatenko.patterns.TestFragment"
-        tools:layout="@layout/fragment_test" />
 </navigation>
