--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,14 @@
 
     <item
         android:id="@+id/main_graph_id"
-        android:title="Идеи" />
-
-    <item
-        android:id="@+id/profile_graph_id"
-        android:title="Профиль" />
+        android:title="@string/ideas" />
 
     <item
         android:id="@+id/activities_graph_id"
-        android:title="Активности" />
+        android:title="@string/promise" />
+
+    <item
+        android:id="@+id/profile_graph_id"
+        android:title="@string/profile" />
 
 </menu>
