--- a/app/src/main/res/layout/fragment_frame.xml
+++ b/app/src/main/res/layout/fragment_frame.xml
@@ -19,5 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_weight="0"
+        android:theme="@style/Widget.BottomNavigationView"
         app:menu="@menu/bottom_nav_menu" />
 </LinearLayout>
