--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,17 @@
 
     <item
         android:id="@+id/main_graph_id"
+        android:icon="@drawable/selector_idea"
         android:title="@string/ideas" />
 
     <item
         android:id="@+id/activities_graph_id"
+        android:icon="@drawable/selector_promise"
         android:title="@string/promise" />
 
     <item
         android:id="@+id/profile_graph_id"
+        android:icon="@drawable/selector_profile"
         android:title="@string/profile" />
 
 </menu>
