--- a/common_android/src/main/res/values/themes.xml
+++ b/common_android/src/main/res/values/themes.xml
@@ -2,7 +2,18 @@
 <resources>
 
     <style name="Text">
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/pinzelan_regular</item>
+    </style>
+
+    <style name="Button">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/pinzelan_regular</item>
+    </style>
+
+    <style name="TextSmall">
+        <item name="android:textSize">12sp</item>
         <item name="android:fontFamily">@font/pinzelan_regular</item>
     </style>
 
