--- a/feature_promise_android/src/main/res/layout/list_item_promise.xml
+++ b/feature_promise_android/src/main/res/layout/list_item_promise.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/text_id"
+    style="@style/TextMedium"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/text_id"
-        style="@style/TextMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:minHeight="@dimen/medium_item_height"
-        android:padding="@dimen/padding_medium"
-        android:textColor="@color/black"
-        tools:text="@tools:sample/lorem/random" />
-
-</androidx.cardview.widget.CardView>
-
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:minHeight="@dimen/medium_item_height"
+    android:padding="@dimen/padding_medium"
+    android:textColor="@color/black"
+    tools:text="@tools:sample/lorem/random" />
