--- a/feature_profile_android/src/main/res/layout/fragment_profile.xml
+++ b/feature_profile_android/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,10 +23,10 @@
     <TextView
         android:id="@+id/name_id"
         style="@style/TextMedium"
-        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_medium"
+        android:textColor="@color/black"
         tools:text="Firstname Lastname" />
 
     <TextView
@@ -35,6 +36,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_small"
         tools:text="YourEmail@google.com" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/prefs_list_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="3"
+        tools:listitem="@layout/list_item_pref_switch" />
 
     <View
         android:layout_width="match_parent"
@@ -46,7 +57,6 @@
         style="@style/ButtonMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/pinzelan_regular"
         tools:text="Sign In" />
 
     <Button
@@ -54,7 +64,6 @@
         style="@style/ButtonMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/pinzelan_regular"
         tools:text="Sign Out" />
 
 </LinearLayout>
