--- a/feature_profile_android/src/main/res/layout/list_item_pref_switch.xml
+++ b/feature_profile_android/src/main/res/layout/list_item_pref_switch.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/medium_item_height"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:parentTag="android.widget.LinearLayout">
 
     <TextView
         android:id="@+id/title_id"
@@ -19,4 +20,4 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+</merge>
