--- a/feature_promise_android/src/main/res/layout/list_item_promise.xml
+++ b/feature_promise_android/src/main/res/layout/list_item_promise.xml
@@ -8,5 +8,5 @@
     android:gravity="center"
     android:minHeight="@dimen/medium_item_height"
     android:padding="@dimen/padding_medium"
-    android:textColor="@color/black"
+    android:textColor="?attr/colorPrimary"
     tools:text="@tools:sample/lorem/random" />
