--- a/feature_idea_android/src/main/res/layout/fragment_idea.xml
+++ b/feature_idea_android/src/main/res/layout/fragment_idea.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/padding_medium"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
