--- a/feature_profile_android/src/main/res/layout/list_item_pref_switch.xml
+++ b/feature_profile_android/src/main/res/layout/list_item_pref_switch.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/title_id"
         style="@style/TextMedium"
+        android:textColor="?attr/colorPrimary"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
