--- a/app/src/main/res/navigation/app_graph.xml
+++ b/app/src/main/res/navigation/app_graph.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_graph_id"
-    app:startDestination="@id/frame_fragment">
+    app:startDestination="@id/mainframe_fragment">
 
     <fragment
-        android:id="@+id/frame_fragment"
-        android:name="ru.gubatenko.patterns.FrameFragment"
-        tools:layout="@layout/fragment_frame" />
+        android:id="@+id/mainframe_fragment"
+        android:name="com.example.feature_frame_android.MainframeFragment"
+        tools:layout="@layout/fragment_mainframe" />
 
     <include app:graph="@navigation/ofer_auth_graph" />
     <include app:graph="@navigation/auth_graph" />
