--- a/feature_idea_android/src/main/res/navigation/idea_graph.xml
+++ b/feature_idea_android/src/main/res/navigation/idea_graph.xml
@@ -2,11 +2,11 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_graph_id"
-    app:startDestination="@id/main_fragment_id">
+    android:id="@+id/idea_graph_id"
+    app:startDestination="@id/idea_fragment_id">
 
     <fragment
-        android:id="@+id/main_fragment_id"
+        android:id="@+id/idea_fragment_id"
         android:name="ru.gubatenko.feature_main_android.IdeaFragment"
         tools:layout="@layout/fragment_idea" />
 
