--- a/feature_mainframe_android/src/main/res/layout/fragment_mainframe.xml
+++ b/feature_mainframe_android/src/main/res/layout/fragment_mainframe.xml
@@ -6,16 +6,16 @@
     android:orientation="vertical">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/frame_nav_host_fragment"
+        android:id="@+id/fragment_container_view_id"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/frame_nav_graph" />
+        app:navGraph="@navigation/frame_graph" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/bottom_navigation_view_id"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_weight="0"
