--- a/feature_mainframe_android/src/main/res/menu/bottom_nav_menu.xml
+++ b/feature_mainframe_android/src/main/res/menu/bottom_nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/main_graph_id"
+        android:id="@+id/idea_graph_id"
         android:icon="@drawable/selector_idea"
         android:title="@string/ideas" />
 
     <item
-        android:id="@+id/activities_graph_id"
+        android:id="@+id/promise_graph_id"
         android:icon="@drawable/selector_promise"
         android:title="@string/promise" />
 
