--- a/feature_mainframe_android/src/main/res/navigation/frame_graph.xml
+++ b/feature_mainframe_android/src/main/res/navigation/frame_graph.xml
@@ -2,10 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/frame_graph_id"
-    app:startDestination="@id/main_graph_id">
+    app:startDestination="@id/idea_graph_id">
 
-    <include app:graph="@navigation/main_graph" />
+    <include app:graph="@navigation/idea_graph" />
     <include app:graph="@navigation/profile_graph" />
-    <include app:graph="@navigation/activities_graph" />
+    <include app:graph="@navigation/promise_graph" />
 
 </navigation>
