--- a/feature_promise_android/src/main/res/navigation/promise_graph.xml
+++ b/feature_promise_android/src/main/res/navigation/promise_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/promise_fragment_id"
-        android:name="com.example.feature_accepted_activities_android.PromiseFragment"
+        android:name="com.example.feature_accepted_activities_android.PromiseComposeFragment"
         tools:layout="@layout/fragment_promise" />
 
 </navigation>
